--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <span class="hero-title-sub">& Pompe à Chaleur</span>
                 </h1>
 
-                <p class="hero-subtitle">Installation professionnelle, dépannage rapide et entretien sur toute l'Île-de-France. Partenaire des plus grandes marques.</p>
+                <p class="hero-subtitle">Votre confort, notre expertise. Installation professionnelle, dépannage rapide et entretien sur toute l'Île-de-France.</p>
 
                 <div class="hero-features">
                     <div class="hero-feature">
@@ -157,11 +157,11 @@
                             <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </a>
-                    <a href="tel:+33699452113" class="btn btn-secondary btn-hero">
+                    <a href="tel:+33744771438" class="btn btn-secondary btn-hero">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                             <path d="M3 5C3 3.89543 3.89543 3 5 3H8.27924C8.70967 3 9.09181 3.27543 9.22792 3.68377L10.7257 8.17721C10.8831 8.64932 10.6694 9.16531 10.2243 9.38787L7.96701 10.5165C9.06925 12.9612 11.0388 14.9308 13.4835 16.033L14.6121 13.7757C14.8347 13.3306 15.3507 13.1169 15.8228 13.2743L20.3162 14.7721C20.7246 14.9082 21 15.2903 21 15.7208V19C21 20.1046 20.1046 21 19 21H18C9.71573 21 3 14.2843 3 6V5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        <span>06 99 45 21 13</span>
+                        <span>07 44 77 14 38</span>
                     </a>
                 </div>
             </div>
@@ -389,11 +389,11 @@
                 <div class="emergency-cta-content">
                     <h3 class="emergency-cta-title">Une panne ? Contactez-nous immédiatement</h3>
                     <p class="emergency-cta-text">Nos techniciens interviennent rapidement sur toute l'Île-de-France</p>
-                    <a href="tel:+33699452113" class="btn btn-primary btn-large">
+                    <a href="tel:+33744771438" class="btn btn-primary btn-large">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path d="M3 5C3 3.89543 3.89543 3 5 3H8.27924C8.70967 3 9.09181 3.27543 9.22792 3.68377L10.7257 8.17721C10.8831 8.64932 10.6694 9.16531 10.2243 9.38787L7.96701 10.5165C9.06925 12.9612 11.0388 14.9308 13.4835 16.033L14.6121 13.7757C14.8347 13.3306 15.3507 13.1169 15.8228 13.2743L20.3162 14.7721C20.7246 14.9082 21 15.2903 21 15.7208V19C21 20.1046 20.1046 21 19 21H18C9.71573 21 3 14.2843 3 6V5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        06 99 45 21 13
+                        07 44 77 14 38
                     </a>
                 </div>
             </div>
@@ -648,15 +648,15 @@
                     <div class="contact-item">
                         <div class="contact-icon">📍</div>
                         <div class="contact-details">
-                            <h3>Zone d'intervention</h3>
-                            <p>Île-de-France, France</p>
+                            <h3>Adresse</h3>
+                            <p>1 avenue Perraton<br>Villeparisis 77270</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📞</div>
                         <div class="contact-details">
                             <h3>Téléphone</h3>
-                            <p><a href="tel:+33699452113">+33 6 99 45 21 13</a></p>
+                            <p><a href="tel:+33744771438">07 44 77 14 38</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -719,7 +719,7 @@
                 <div class="footer-section">
                     <h3 class="footer-title">BOREAL CLIM</h3>
                     <p class="footer-text">
-                        Service professionnel de pose et d'entretien de climatisation et pompe à chaleur en Île-de-France.
+                        Votre confort, notre expertise. Service professionnel de pose et d'entretien de climatisation et pompe à chaleur en Île-de-France.
                     </p>
                 </div>
                 <div class="footer-section">
@@ -733,9 +733,11 @@
                 <div class="footer-section">
                     <h4 class="footer-heading">Contact</h4>
                     <ul class="footer-links">
-                        <li>Île-de-France</li>
-                        <li><a href="tel:+33699452113">+33 6 99 45 21 13</a></li>
+                        <li>1 avenue Perraton</li>
+                        <li>Villeparisis 77270</li>
+                        <li><a href="tel:+33744771438">07 44 77 14 38</a></li>
                         <li><a href="mailto:borealclim@gmail.com">borealclim@gmail.com</a></li>
+                        <li>borealclim.fr</li>
                     </ul>
                 </div>
             </div>
